Package vulnerability update

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.4",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
@@ -19,15 +19,15 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
-    "extend": "^3.0.1",
+    "extend": "^3.0.2",
     "fs-extra": "^3.0.1",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.4",
     "grunt-browserify": "^5.0.0",
     "grunt-bumpup": "^0.6.3",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.7.0",
